--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@google/genai": "^1.32.0",
-    "react-markdown": "^10.1.0",
-    "react-dom": "^19.2.1",
+    "docx": "8.5.0",
+    "file-saver": "2.0.5",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.559.0",
     "react": "^19.2.1",
-    "rehype-raw": "^7.0.0",
-    "docx": "8.5.0",
-    "file-saver": "2.0.5"
+    "react-dom": "^19.2.1",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
